make tests easier to debug.