@@ -91,9 +91,12 @@ class KubernetesSecretConfigSourceTest {
     void loadList() throws GestaltException {
         KubernetesSecretConfigSource source = new KubernetesSecretConfigSource(kubernetesPath);
         var results = source.loadList();
-        Assertions.assertEquals(new Pair<>("db.host.password", "abcdef"), results.get(0));
-        Assertions.assertEquals(new Pair<>("db.host.uri", "jdbc:postgresql://localhost:5432/mydb1"), results.get(1));
-        Assertions.assertEquals(new Pair<>("subservice.booking.token", "111222333"), results.get(2));
+        Assertions.assertEquals("db.host.password", results.get(0).getFirst());
+        Assertions.assertEquals("abcdef", results.get(0).getSecond());
+        Assertions.assertEquals("db.host.uri", results.get(1).getFirst());
+        Assertions.assertEquals("jdbc:postgresql://localhost:5432/mydb1", results.get(1).getSecond());
+        Assertions.assertEquals("subservice.booking.token", results.get(2).getFirst());
+        Assertions.assertEquals("111222333", results.get(2).getSecond());
     }
 
     @Test
